# Polymarket-Sports-Trading-Bot

./: .env  .gitignore  README.md  event_matching.py  fetch_odds_api.py  fetch_odds_comparison.py  fetch_odds_data.py  fetch_sports_markets.py  odds_utils.py  package-lock.json  package.json  pyproject.toml  sport_detection.py
data_updater/: trading_utils.py
docs/: ARBITRAGE_CALCULATION.md  TRADING_ENGINE.md
node_logger/: pretty_fancy_bridge.mjs
poly_sports/: __init__.py
poly_sports/data_fetching/: __init__.py  fetch_odds_api.py  fetch_odds_comparison.py  fetch_odds_data.py  fetch_realtime_prices.py  fetch_sports_markets.py
poly_sports/processing/: __init__.py  arbitrage_calculation.py  event_matching.py  pnl_calculator.py  price_tracker.py  sport_detection.py
poly_sports/trading/: __init__.py  config.py  decision_engine.py  engine.py  journal.py  models.py  (+2 more)
scripts/: monitor_pnl.py  run_arbitrage_detection.py  run_auto_trader.py  run_combined_strategy.py  run_max_delta_analysis.py  summarize_trading_session.py  test_event_matching.py  test_odds_pipeline.py
tests/: test_arbitrage_calculation.py  test_clob_enrichment.py  test_event_matching.py  test_export.py  test_fetch_odds_api.py  test_fetch_odds_data.py  test_fetch_realtime_prices.py  test_fetch_sports_markets.py  test_integration.py  test_monitor_pnl.py  test_odds_utils.py  test_pnl_calculator.py  test_price_tracker.py  test_sport_detection.py  test_trading_decision_engine.py  test_trading_engine_integration.py  test_trading_paper_execution.py  test_trading_position_manager.py  test_trading_risk_engine.py
(+14 files in other folders)
