[project]
name = "poly-sports"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "py-clob-client",
    "requests",
    "python-dotenv",
    "pandas",
    "pytest",
    "pytest-mock",
    "rapidfuzz",
    "python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

